# project_hw

./: .gitignore  README.md  progress_email.txt  pyproject.toml  train_log.txt
fine-tune-llm/: .gitignore  README.md  base_predict.yaml  bruh_predict.yaml  construct_trajectories.py  data-validator.py  eval_results.jsonl  eval_results_summary.json  finetuned_results.json  finetuned_results.jsonl  finetuned_results_summary.json  generate_new_trajectories.py  harness_train.py  harnesssss.py  predict.yaml  pyproject.toml  scrape_aops.py  split_dataset.py  train_model.yaml
fine-tune-llm/sft-data/: aime_i_2001_trajectories.jsonl  aime_i_2002_trajectories.jsonl  aime_i_2003_trajectories.jsonl  aime_i_2004_trajectories.jsonl  aime_i_2005_trajectories.jsonl  aime_i_2006_trajectories.jsonl  aime_i_2007_trajectories.jsonl  aime_i_2008_trajectories.jsonl  aime_i_2009_trajectories.jsonl  aime_i_2010_trajectories.jsonl  aime_i_2011_trajectories.jsonl  aime_i_2012_trajectories.jsonl  aime_i_2013_trajectories.jsonl  aime_i_2014_trajectories.jsonl  aime_i_2015_trajectories.jsonl  aime_i_2016_trajectories.jsonl  aime_i_2017_trajectories.jsonl  aime_i_2018_trajectories.jsonl  aime_ii_2001_trajectories.jsonl  aime_ii_2002_trajectories.jsonl  aime_ii_2003_trajectories.jsonl  aime_ii_2004_trajectories.jsonl  aime_ii_2005_trajectories.jsonl  aime_ii_2006_trajectories.jsonl  aime_ii_2007_trajectories.jsonl  aime_ii_2008_trajectories.jsonl  aime_ii_2009_trajectories.jsonl  aime_ii_2010_trajectories.jsonl  aime_ii_2011_trajectories.jsonl  aime_ii_2012_trajectories.jsonl  aime_test.jsonl  (+12 more)
(+43 files in other folders)
