[project]
name = "fine-tune-llm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.103.1",
    "bitsandbytes>=0.48.2",
    "datasets>=4.5.0",
    "google-generativeai>=0.8.6",
    "numpy>=2.0.2",
    "peft>=0.17.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "trl>=0.24.0",
]
